Change the time to am

--- a/data.yaml
+++ b/data.yaml
@@ -7,7 +7,7 @@
         "john"
       ],
       "working hours": {
-        "monday - saturday": "8am - 10pm",
+        "monday - saturday": "8am - 10am",
         "sunday": "12pm -8pm"
       }
     },
