change name of supermarket to goodluck

--- a/data.yaml
+++ b/data.yaml
@@ -11,7 +11,7 @@
         "sunday": "12pm -8pm"
       }
     },
-    "All state supermarket": {
+    "Goodluck supermarket": {
       "employees": [
         "jessica",
         "david",
