change name of employee

--- a/data.yaml
+++ b/data.yaml
@@ -15,7 +15,7 @@
       "employees": [
         "jessica",
         "david",
-        "dhonald"
+        "mood"
       ],
       "working hours": {
         "monday - saturday": "7am - 6pm",
